--- a/CSS/diseño.css
+++ b/CSS/diseño.css
@@ -1,4 +1,44 @@
 * {
-    margin: 20px;
-    
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* Estilos para el contenedor "header" */
+header {
+    background-color: #f0f0f0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 2rem;
+}
+
+header title {
+    color: white;
+    font-size: 1.5rem;
+}
+
+body h1 {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* Cambio de estilos de la lista no ordenada */
+nav ul {
+    list-style: none;
+    display: flex;
+    gap: 32px;
+}
+
+nav ul li a {
+    color: rgba(94, 44, 8, 0.938);
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    border-radius: 4px;
+    transition: all 0.3s ease;
+}
+
+nav ul li a:hover {
+    background-color: white;
 }
