--- a/CSS/diseño.css
+++ b/CSS/diseño.css
@@ -2,13 +2,18 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: playfair display, system-ui;
+}
+
+.title {
+    color: goldenrod;
 }
 
 /* Estilos para el contenedor "header" */
 header {
     background-color: #f0f0f0;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding: 1rem 2rem;
 }
@@ -18,27 +23,81 @@ header title {
     font-size: 1.5rem;
 }
 
-body h1 {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 /* Cambio de estilos de la lista no ordenada */
 nav ul {
     list-style: none;
     display: flex;
     gap: 32px;
+    background-color: #f0f0f0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 1rem 2rem;
 }
 
 nav ul li a {
     color: rgba(94, 44, 8, 0.938);
+    font-weight: bolder;
     text-decoration: none;
     padding: 0.5rem 1rem;
     border-radius: 4px;
-    transition: all 0.3s ease;
+    transition: all 0.5s ease;
 }
 
 nav ul li a:hover {
+    background-color: #d3b792;
+}
+
+
+/*Encabezado */
+.encabezado {
+    max-width: 800px;
+    margin: auto;
+    text-align: center;
+    padding: 20px;
+}
+
+/* Diseño pestaña de Inicio */
+.inicio {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    font-family: playfair display, system-ui;
+}
+
+.inicio img {
+    width: 800px;
+}
+
+.contenedor {
+    background-color: black;
+}
+
+.contenedor img {
+    height: 600px;
+    width: 600px;
+    position: relative;
+    padding: 0;
+}
+
+/* Muestra */
+.cuadro {
+    border: 5px solid #333;
     background-color: white;
+    box-sizing: content-box;
+    box-sizing: border-box;
+    width: 30rem;
+    height: auto;
+    margin-top: 30px;
+    padding: 25px;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    object-fit:contain;
+    overflow:hidden;
+    flex-wrap: wrap;
+    flex-direction: column;
+    text-align: center;
+    border-radius: 25px;
+    align-items: flex-end; 
 }
