--- a/CSS/diseño.css
+++ b/CSS/diseño.css
@@ -80,6 +80,28 @@ nav ul li a:hover {
     padding: 0;
 }
 
+/* Muestra */
+.cuadro {
+    border: 5px solid #333;
+    background-color: white;
+    box-sizing: content-box;
+    box-sizing: border-box;
+    width: 30rem;
+    height: auto;
+    margin-top: 30px;
+    padding: 25px;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    object-fit:contain;
+    overflow:hidden;
+    text-align: center;
+    border-radius: 25px;
+    align-items: flex-end; 
+}
+
+
+
 /* Diseño pestaña de Nosotros */
 .historia {
     font-size: 1.2em; 
@@ -96,28 +118,101 @@ nav ul li a:hover {
     color: rgba(94, 44, 8, 0.938);
 }
 
-/* Muestra */
-.cuadro {
-    border: 5px solid #333;
-    background-color: white;
-    box-sizing: content-box;
-    box-sizing: border-box;
-    width: 30rem;
-    height: auto;
-    margin-top: 30px;
-    padding: 25px;
-    position: absolute;
-    bottom: 0px;
-    right: 0px;
-    object-fit:contain;
-    overflow:hidden;
-    flex-wrap: wrap;
-    flex-direction: column;
+.media {
+    margin-top: 1.5em;
+    padding: 20px;
     text-align: center;
-    border-radius: 25px;
-    align-items: flex-end; 
+    font-size: 1.2em; 
+    margin-bottom: 1em;
+    background-color: #f8c6106b;
 }
 
+/* Fichas */
+.fichas {
+    padding: 20px;
+    gap: 20px;
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap; /*Fija que se mantenga todo igual dentro de las tarjetas*/
+    justify-content: center;
+}
+
+.ramos {
+    background-color: #f5f5f5;
+    border-radius: 10px;
+    width: 800px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    overflow: hidden; /* Evita que el contenido se desborde fuera de los limites */
+    text-align: center;
+}
+
+.ramos h2 {
+    margin-top: 10px;
+    background-color: #dfa60c;
+}
+
+.ramos p {
+    text-align: center;
+    padding: 20px;
+}
+
+.boton {
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color: #dfa60c;
+}
+
+.macetas {
+    background-color: #f5f5f5;
+    border-radius: 10px;
+    width: 800px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    overflow: hidden; /* Evita que el contenido se desborde fuera de los limites */
+    text-align: center;
+}
+
+.macetas h2 {
+    margin-top: 10px;
+    background-color: #b55b05;
+}
+
+.macetas p {
+    text-align: center;
+    padding: 20px;
+}
+
+.boton-mace {
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color: #b55b05;
+}
+
+.artifi {
+    background-color: #f5f5f5;
+    border-radius: 10px;
+    width: 800px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    overflow: hidden; /* Evita que el contenido se desborde fuera de los limites */
+    text-align: center;
+}
+
+.artifi h2 {
+    margin-top: 10px;
+    background-color: #2a0e00;
+    color: white;
+}
+
+.artifi p {
+    text-align: center;
+    padding: 20px;
+}
+
+.boton-art {
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color: #2a0e00;
+    color: white;
+}
 
 
 /* Estilos del Footer */
