--- a/CSS/diseño.css
+++ b/CSS/diseño.css
@@ -10,7 +10,7 @@
 
 /* Estilos para el contenedor "header" */
 header {
-    background-color:#b55b05;
+    background-color:#c4742c;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -112,6 +112,77 @@ nav ul li a:hover {
     align-items: flex-end; 
 }
 
+/* Pestaña Inicio */
+.description h1 {
+    text-align: center;
+    background-color: #ebac34;
+}
+
+.container-flor {
+    display: flex;
+    gap: 75px; /* Espacio entre las tarjetas */
+    padding: 40px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+/* Estilo de la tarjeta */
+.card-flor {
+    position: relative;
+    width: 350px;
+    height: 250px;
+    overflow: hidden;
+    border-radius: 8px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    text-decoration: none; /* Quita el subrayado del enlace */
+}
+
+/* Imagen dentro de la tarjeta */
+.card-flor img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Asegura que la imagen llene el espacio sin deformarse */
+    transition: transform 0.5s ease;
+}
+
+/* Efecto hover en la tarjeta */
+.card-flor:hover {
+    transform: scale(1.05); /* Aumenta ligeramente el tamaño de la tarjeta */
+    outline: 3px solid #d3b792; /* Crea un borde */
+    outline-offset: 2px; /* Separa el borde de la tarjeta */
+}
+
+.card-flor:hover img {
+    transform: scale(1.1); /* Aumenta el tamaño de la imagen dentro de la tarjeta */
+}
+
+.hover-text {
+    font-size: 20px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    opacity: 0;
+    transition: opacity 0.25s ease;
+}
+
+.card-flor:hover img{
+    opacity: 0.85;
+}
+
+.card-flor:hover .hover-text{
+    opacity: 1;
+}
+
+
+
 
 
 /* Diseño pestaña de Nosotros */
@@ -136,7 +207,7 @@ nav ul li a:hover {
     text-align: center;
     font-size: 1.2em; 
     margin-bottom: 1em;
-    background-color: #f8c6106b;
+    background-color: #ebac34;
 }
 
 /* Fichas */
@@ -160,7 +231,7 @@ nav ul li a:hover {
 
 .ramos h2 {
     margin-top: 10px;
-    background-color: #dfa60c;
+    background-color: #ebac34;
 }
 
 .ramos p {
@@ -171,7 +242,7 @@ nav ul li a:hover {
 .boton {
     padding: 10px;
     margin-bottom: 10px;
-    background-color: #dfa60c;
+    background-color: #ebac34;
 }
 
 .macetas {
@@ -185,7 +256,7 @@ nav ul li a:hover {
 
 .macetas h2 {
     margin-top: 10px;
-    background-color: #b55b05;
+    background-color: #c4742c;
 }
 
 .macetas p {
@@ -196,7 +267,7 @@ nav ul li a:hover {
 .boton-mace {
     padding: 10px;
     margin-bottom: 10px;
-    background-color: #b55b05;
+    background-color: #c4742c;
 }
 
 .artifi {
@@ -275,7 +346,7 @@ form {
 .form input{
     width: 100%;
     padding: 10px;
-    border: 2px solid #dfa60c;
+    border: 2px solid #ebac34;
     border-radius: 5px;
     font-size: 1rem;
     outline: none;
@@ -285,7 +356,7 @@ form {
 .form textarea{
     width: 100%;
     padding: 10px;
-    border: 2px solid #dfa60c;
+    border: 2px solid #ebac34;
     border-radius: 5px;
     font-size: 1rem;
     outline: none;
@@ -303,7 +374,7 @@ form {
     transition: 0.2s linear;
     cursor: pointer;
     border: 2px solid #743419;
-    background-color: #dfa60c;
+    background-color: #ebac34;
 }
 
 .form button:hover {
