--- a/CSS/diseño.css
+++ b/CSS/diseño.css
@@ -29,10 +29,11 @@ nav ul {
     gap: 32px;
     background-color: #f0f0f0;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
 }
+
 
 nav ul li a {
     color: rgba(94, 44, 8, 0.938);
