--- a/CSS/diseño.css
+++ b/CSS/diseño.css
@@ -356,28 +356,6 @@ nav ul li a:hover {
     color: white;
 }
 
-/* Seccion Pedidos */
-.pedido {
-    padding: 2em;
-    max-width: 800px; 
-    margin: auto; 
-    text-align: center;
-}
-
-.pedido1 {
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    gap: 10px;
-}
-
-.pedido1 div {
-    background-color: #d3b792;
-    color: black;
-    padding: 20px;
-    text-align: center;
-}
-
-
 /* Pestaña Tips */
 .container {
     max-width: 1500px;
@@ -388,7 +366,7 @@ nav ul li a:hover {
 .container h1 {
     text-align: center;
     color: #743419;
-    font-size: 30px;
+    font-size: 40px;
     margin-bottom: 20px;
 }
   
@@ -445,6 +423,96 @@ nav ul li a:hover {
     text-align: center;
 }
 
+/* Curiosidades */
+.curiosidades {
+    text-align: center;
+    padding: 0;
+    border-radius: 8px;
+}
+
+/* Galería */
+.gallery {
+    display: flex;
+    flex-wrap: wrap; /* Permite que las imágenes se ajusten en filas */
+    gap: 15px;
+    justify-content: center;
+    padding: 10px 0;
+}
+
+/* Contenedor de cada imagen y descripción */
+.gallery .slide {
+    position: relative;
+    overflow: hidden;
+    flex: 1 1 calc(25% - 20px); /* 4 columnas en pantallas grandes */
+    max-width: 300px;
+    border-radius: 10px;
+    margin: 10px;
+    box-sizing: border-box;
+}
+
+/* Imágenes */
+.gallery img {
+    width: 100%;
+    height: 100%; /* Mantiene la proporción en imágenes responsivas */
+    object-fit: cover;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, filter 0.3s ease;
+}
+
+/* Efecto al pasar el cursor */
+.gallery .slide:hover img {
+    transform: scale(1.1);
+    filter: brightness(50%);
+}
+
+/* Descripción superpuesta */
+.gallery .description {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 5px;
+    background: rgba(0, 0, 0, 0.6);
+    color: white;
+    font-size: 1rem;
+    text-align: center;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.gallery .description h3 {
+    padding: 0px;
+    color: #ebac34;
+    margin: 0;
+}
+
+/* Mostrar descripción al pasar el cursor */
+.gallery .slide:hover .description {
+    opacity: 1;
+}
+
+/* Responsividad */
+@media (max-width: 1024px) {
+    .gallery .slide {
+        flex: 1 1 calc(33.333% - 20px); /* 3 columnas en pantallas medianas */
+    }
+}
+
+@media (max-width: 768px) {
+    .gallery .slide {
+        flex: 1 1 calc(50% - 20px); /* 2 columnas en pantallas pequeñas */
+    }
+}
+
+@media (max-width: 480px) {
+    .gallery .slide {
+        flex: 1 1 100%; /* Una columna en pantallas muy pequeñas */
+        max-width: 100%; /* Asegura que ocupe todo el ancho */
+    }
+}
 
 
 /* Pestaña Contacto */
