--- a/CSS/diseño.css
+++ b/CSS/diseño.css
@@ -70,16 +70,34 @@ nav ul li a:hover {
 }
 
 /* Carrusel */
-.slider-container {
+.carousel {
+    border: 2px solid #ddd;
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     display: flex;
     width: 100%;
-    height: 100vh;
-    overflow-x: scroll;
+    height: 90vh;
+    overflow: hidden;
+    position: relative;
 }
   
-.slider-container img {
+.carousel-track {
+    display: flex;
+    animation: slide 12s infinite linear;
+}
+  
+.carousel-track img {
     width: 100%;
+    flex-shrink: 0;
     object-fit: cover;
+}
+  
+@keyframes slide {
+    0% { transform: translateX(0); }
+    25% { transform: translateX(-100%); }
+    50% { transform: translateX(-200%); }
+    75% { transform: translateX(-300%); }
+    100% { transform: translateX(0); }
 }
 
 .contenedor {
@@ -95,22 +113,22 @@ nav ul li a:hover {
 
 /* Muestra */
 .cuadro {
-    border: 5px solid #333;
+    border: 2px solid #ebac34;
     background-color: white;
-    box-sizing: content-box;
-    box-sizing: border-box;
     width: 30rem;
     height: auto;
-    margin-top: 30px;
-    padding: 25px;
+    margin-right: 30px;
+    padding: 20px;
     position: absolute;
-    bottom: 0px;
-    right: 0px;
-    object-fit:contain;
-    overflow:hidden;
+    bottom: 0px; /* Ajusta la distancia desde la parte inferior */
+    right: 20px; /* Ajusta la distancia desde la parte derecha */
+    object-fit: contain;
     text-align: center;
     border-radius: 25px;
-    align-items: flex-end; 
+}
+
+.cuadro:hover {
+    transform: scale(1.05); /* Efecto de crecimiento al pasar el mouse */
 }
 
 /* Pestaña Inicio */
