--- a/CSS/diseño.css
+++ b/CSS/diseño.css
@@ -208,7 +208,7 @@ header {
 .cuadro {
     border: 2px solid #ebac34;
     background-color: white;
-    width: 30rem;
+    max-width: 40%;
     height: auto;
     margin-right: 30px;
     padding: 20px;
@@ -218,11 +218,32 @@ header {
     object-fit: contain;
     text-align: center;
     border-radius: 25px;
+    box-sizing: border-box;
 }
 
 .cuadro:hover {
     transform: scale(1.05); /* Efecto de crecimiento al pasar el mouse */
 }
+
+@media screen and (max-width: 768px) {
+    .cuadro {
+      max-width: 70%; /* Ajusta el ancho del cuadro */
+      padding: 15px; /* Reduce el padding */
+      font-size: 14px; /* Reduce el tamaño del texto */
+      bottom: 10px;
+      right: 10px;
+    }
+  }
+  
+  @media screen and (max-width: 480px) {
+    .cuadro {
+      max-width: 90%; /* Ocupar casi toda la pantalla */
+      padding: 10px; /* Padding más pequeño */
+      font-size: 12px; /* Texto más pequeño */
+      bottom: 5px;
+      right: 5px;
+    }
+  }
 
 /* Pestaña Inicio */
 .description h1 {
@@ -411,8 +432,6 @@ header {
     }
 
 }
-
-
 
 .media {
     margin-top: 1.5em;
